maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:9: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.IslandMaze
  while(!estSurBiscuit() && getDirection() == direction.NORTH){
                                              ^